--- a/Styles/general.css
+++ b/Styles/general.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Cutive Mono', monospace;
     background: var(--background);
     overflow: auto;
-    transition: 0.5s background ease;
+    transition: background 0.5s ease;
 }
 
 #active {
