--- a/Styles/header.css
+++ b/Styles/header.css
@@ -23,6 +23,10 @@ header {
     border: solid 4px transparent;
     border-radius: 50%;
     box-sizing: border-box;
+    z-index: 100;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
 }
 
 .fa-circle-half-stroke:hover {
