--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,77 +1,78 @@
-.container {
-    display: grid;
-    align-content: center;
-    justify-content: left;
-    text-align: center;
-    height: 100%;
-    z-index: 49;
+#main-container {
+    display: flex;
+    margin-top: 8vh;
 }
 
-h1,
-h2,
-p {
-    position: relative;
-    width: max-content;
-    top: -100%;
-    left: 5%;
-    color: var(--text);
-}
+/* PRESENTATION */
 
-h1 {
-    font-size: 3rem;
-}
-
-h2 {
-    font-size: 2rem;
-    margin-bottom: 2rem;
-}
-
-p {
-    left: 7%;
-    max-width: 700px;
-    text-align: left;
-}
-
-h1::before,
-h1::after {
-    content: "";
+#presentation-container {    
+    height: fit-content;
+    width: 75vh;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.title::before {
-    background: var(--background);
-    animation: typewriter 2s steps(14) 1s forwards;
-}
-
-.title::after {
-    width: 0.125em;
-    background: var(--text);
-    animation: typewriter 2s steps(14) 1s forwards, blink 1s infinite;
-}
-
-.subtitle {
-    opacity: 0;
-    transform: translateX(-3rem);
-    animation: fadeInLeft 2s ease-in 4s forwards;
-}
-
-p {
-    opacity: 0;
-    margin: 0;
-    transform: translateX(-3rem);
-    font-size: 1.5rem;
-    animation: fadeInLeft 2s ease-in 5s forwards;
-}
-
-ul {
+    top: 50%;
+    transform: translateY(-50%);
+    left: 2vw;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    list-style-type: none;
-    margin: 0;
-    padding: 0; 
+}
+
+#title {
+    display: inline-block;
+    border-right: 0.1em solid rgb(var(--color));
+    width: 58.5%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typewriter 4s steps(14), blink-caret 0.5s step-end infinite alternate;
+}
+
+#subtitle {
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    transform: translateX(-2rem);
+    animation: fadeFromLeft 2s linear 5s forwards;
+}
+
+#presentation {
+    opacity: 0;
+    transform: translateX(-1rem);
+    animation: fadeFromLeft 2s linear 5.5s forwards;
+}
+
+/* PROJECTS */
+
+#projects-container {
+    height: fit-content;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 2vw;
+}
+
+#projects-list {
+    list-style: none;
+    opacity: 0;
+    animation: fadeIn 2s linear 6s forwards;
+}
+
+#projects-list li {
+    font-size: 1.5rem;
+}
+
+#projects-list img {
+    opacity: 0;
+    width: 1000px;
+    position: fixed;
+    top: -25%;
+    right: -400%;
+    filter: saturate(0.5) blur(3px);
+    pointer-events: none;
+    z-index: -1;
+    transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out; 
+}
+
+#projects-list li:hover > img {
+    display: inline;
+    opacity: 0.2;
+    right: 0;
 }
