--- a/Styles/message-sent.css
+++ b/Styles/message-sent.css
@@ -1,12 +1,34 @@
+#thanks-container {
+    position: absolute;
+    top: 40%;
+    left: 3%;
+    transform: translateY(-50%);
+}
+
 #counter {
-    color: var(--theme);
+    color: rgb(var(--theme));
+    transition: color 0.3s ease-in-out;
 }
 
-.title::before {
-    animation: typewriter 2s
-    steps(12) 1s forwards;
+#title {
+    display: inline-block;
+    border-right: 0.1em solid rgb(var(--color));
+    width: 350px;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typewriter 4s steps(12), blink-caret 0.5s step-end infinite alternate;
 }
 
-.title::after {
-    animation: typewriter 2s steps(12) 1s forwards, blink 1s infinite;
+#subtitle {
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    transform: translateX(-2rem);
+    animation: fadeFromLeft 2s linear 5s forwards;
+}
+
+#redirect {
+    opacity: 0;
+    transform: translateX(-1rem);
+    animation: fadeFromLeft 2s linear 5.5s forwards;
 }
